<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/blue"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/descrTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/editDeleteL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/update"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true" />


            <TextView
                android:id="@+id/deleteImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/delete"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>