<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/blue"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/editDeleteL"
            android:orientation="vertical"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/descrTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/dateTxt"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/date"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editDeleteL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/update"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true" />


            <TextView
                android:id="@+id/deleteImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/delete"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>