<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo_background">

    <Button
        android:id="@+id/bt_next"
        android:layout_width="158dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="253dp"
        android:layout_height="338dp"
        android:alpha="0.5"
        android:contentDescription="@string/productivity_image"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bt_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        app:layout_constraintVertical_bias="0.67"
        app:srcCompat="@drawable/productivity"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="403dp"
        android:layout_height="446dp"
        android:layout_marginTop="326dp"
        android:layout_marginBottom="298dp"
        android:text="@string/onboard_quote1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboard_topic1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>