<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8E9EB">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/good_day"
                android:textColor="@color/blue"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todayTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeTxt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/today_s_task"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edSearchL"

                style="@style/BlackOutlineStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/todayTxt"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/Search"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edSearchL"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="10dp"
                android:layout_centerHorizontal="true"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingBottom="100dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/listOrGridImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/gridToList"
            android:src="@drawable/ic_view_list"
            android:visibility="invisible"
            app:backgroundTint="@color/white"
            app:elevation="6dp"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"
            app:tint="@color/blue" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sortImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sort"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="2dp"
            app:fabSize="normal"
            app:tint="@color/blue"
            app:backgroundTint="@color/white"
            android:background="@drawable/outline"
            android:contentDescription="@string/sortButton" />



        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addTaskFABtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/add_button"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_add_circle"
            app:iconSize="25dp"
            app:iconTint="@color/blue"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|end" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>