<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTaskTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/update_task"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <ImageView
            android:id="@+id/closeImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:tint="@color/blue"
            android:src="@drawable/ic_close" />

        <View
            android:id="@+id/viewHLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/titleTaskTxt"
            android:background="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewHLine"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edTaskTitleL"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/outline"
                android:hint="@string/enter_the_task_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_margin="2dp"
                    android:background="#EAE4E8"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edTaskDescL"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:background="@drawable/outline"
                android:hint="@string/enter_the_task_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTaskDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#EAE4E8"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateTaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/blue"
                android:text="@string/update"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>